--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
     <link rel="stylesheet" href="https://unpkg.com/transition-style">
+    <script src="https://unpkg.com/flowbite@1.4.4/dist/flowbite.js"></script>
   </head>
   <body>
     <div id="root"></div>
