--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href="https://www.dafontfree.net/embed/aW50cm8tcnVzdC1nLWJhc2UtMi1saW5lJmRhdGEvNTEvaS8yMTk5MC9JbnRyb1J1c3RHLUJhc2UyTGluZS5vdGY" rel="stylesheet" type="text/css"/>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
